@startuml
class Clothes{
    name:String
    setName(name:String):void
    type():void
    select():void
    take():void
    buy():void
}
class BJManClothes
class BJGirlClothes
class SHManClothes
class SHGirlClothes
Clothes <|-- BJManClothes
Clothes <|-- BJGirlClothes
Clothes <|-- SHManClothes
Clothes <|-- SHGirlClothes
class OrderClothesFactory{
    systemIn():String
    createClothes(typeName:String):Clothes
}
class BJOrderClothes
class SHOrderClothes
BJOrderClothes ..> BJGirlClothes
BJOrderClothes ..> BJManClothes
SHOrderClothes ..> SHManClothes
SHOrderClothes ..> SHGirlClothes
OrderClothesFactory <|-- BJOrderClothes
OrderClothesFactory <|-- SHOrderClothes

OrderClothesFactory..>Clothes
@enduml